--- a/browserAction.html
+++ b/browserAction.html
@@ -27,9 +27,8 @@ Use browser actions to put icons in the main Opera toolbar, to the right of the 
 
 
 
-        <h2 id="apiReference">API Reference: chrome.browserAction</h2>
         <div class="api_reference">
-            <h3 id="types">Types</h3>
+            <h2 id="types">Types</h2>
               <div>
                 <h3 id="type-ColorArray">ColorArray</h3>
                 <div>
@@ -44,7 +43,7 @@ Use browser actions to put icons in the main Opera toolbar, to the right of the 
                     Pixel data for an image. Must be an ImageData object (for example, from a <code>canvas</code> element).
                   </dd>  </div>
               </div>
-            <h3 id="methods">Methods</h3>
+            <h2 id="methods">Methods</h2>
               <div>
                 <h4 id="method-setTitle">setTitle</h4>
                 <div class="summary lower"><code>
@@ -750,8 +749,8 @@ Use browser actions to put icons in the main Opera toolbar, to the right of the 
             <h3 id="events">Events</h3>
               <div>
                 <h4 id="event-onClicked">onClicked</h4>
-                <div class="summary">
-                  <span class="subdued">chrome.browserAction.</span>onClicked<span class="subdued">.addListener</span>(function(<span><a href="tabs.html#type-Tab">tabs.Tab</a> <span class="variable">tab</span></span>)<span class="subdued"> {...}</span>);
+                <div class="summary"><code>
+                  <span class="subdued">chrome.browserAction.</span>onClicked<span class="subdued">.addListener</span>(function(<span><a href="tabs.html#type-Tab">tabs.Tab</a> <span class="variable">tab</span></span>)<span class="subdued"> {...}</span>);</code>
                 </div>
                 <div class="description">
               <p>
