--- a/contextMenus.html
+++ b/contextMenus.html
@@ -56,9 +56,8 @@ Use the
 
 
 
-        <h2 id="apiReference">API Reference: chrome.contextMenus</h2>
         <div class="api_reference">
-            <h3 id="types">Types</h3>
+            <h2 id="types">Types</h2>
               <div>
                 <h3 id="type-OnClickData">OnClickData</h3>
                 <div>
@@ -238,7 +237,7 @@ Use the
               </dl></dd>
                 </div>
               </div>
-            <h3 id="methods">Methods</h3>
+            <h2 id="methods">Methods</h2>
               <div>
                 <h4 id="method-create">create</h4>
                 <div class="summary"><code>
@@ -335,7 +334,7 @@ Use the
                                 </code>
                               </dt>
                               <dd>
-                                List of contexts this menu item will appear in. Defaults to ['page'] if not specified. Specifying ['all'] is equivalent to the combination of all other contexts except for 'launcher'. The 'launcher' context is only supported by apps and is used to add menu items to the context menu that appears when clicking on the app icon in the launcher/taskbar/dock/etc. Different platforms might put limitations on what is actually supported in a launcher context menu.
+                                List of contexts this menu item will appear in. Defaults to ['page'] if not specified. Specifying ['all'] is equivalent to the combination of all other contexts.
                               </dd>
                             </div>
                             <div>
