--- a/idle.html
+++ b/idle.html
@@ -53,9 +53,8 @@ Use the
 </tbody>
 </table>
 
-        <h2 id="apiReference">API Reference: chrome.idle</h2>
         <div class="api_reference">
-            <h3 id="methods">Methods</h3>
+            <h2 id="methods">Methods</h2>
               <div>
                 <h4 id="method-queryState">queryState</h4>
                 <div class="summary lower"><code>
@@ -146,7 +145,7 @@ Use the
                   </dl>
                 </div>
               </div>
-            <h3 id="events">Events</h3>
+            <h2 id="events">Events</h2>
               <div>
                 <h4 id="event-onStateChanged">onStateChanged</h4>
                 <div class="summary"><code>
@@ -157,7 +156,7 @@ Use the
                     Fired when the system changes to an active, idle or locked state. The event fires with "locked" if the screen is locked or the screensaver activates, "idle" if the system is unlocked and the user has not generated any input for a specified number of seconds, and "active" when the user generates input on an idle system.
                   </p>      <h4>Listener Parameters</h4>
                     <dl>
-                      <div><code>  <a name="property-onStateChanged-newState"></a>  <dt>    <span class="variable">newState</span>    <span class="property">      (                enumerated string ["active""idle""locked"]      )    </span>  </dt></code></div>
+                      <div><code>  <a name="property-onStateChanged-newState"></a>    <span class="variable">newState</span>    <span class="property">      (                enumerated string ["active""idle""locked"]      )    </span> </code></div>
                     </dl>
                 </div>
               </div>
