--- a/speeddial.html
+++ b/speeddial.html
@@ -12,8 +12,9 @@ copyright: opera-ccby
           <h2>Contents</h2>
           
               <ol>
+									<li><a href="speeddial.html#types">Types</a><ol>  <li>    <a href="speeddial.html#type-SpeedDial">SpeedDial</a>  </li>  </ol></li>
                   <li><a href="speeddial.html#methods">Methods</a>
-                  	<ol>  <li><a href="speeddial.html#types">Types</a><ol>  <li>    <a href="speeddial.html#type-SpeedDial">SpeedDial</a>  </li>  </ol></li>
+                  	<ol> 
                   	
                   			<li><a href="speeddial.html#method-get">get</a></li>  
                   			<li><a href="speeddial.html#method-update">update</a></li>  
@@ -44,9 +45,8 @@ copyright: opera-ccby
     <td><a href="tut_sd_extensions.html">Speed Dial Extensions</a></td>
   </tr>
 </table>
-        <h2 id="apiReference">API Reference: opr.speeddial</h2>
         <div class="api_reference">
-        <h3 id="types">Types</h3>
+        <h2 id="types">Types</h2>
           <div>
             <h3 id="type-SpeedDial">SpeedDial</h3>
             <div>
@@ -87,7 +87,7 @@ copyright: opera-ccby
           </dl></dd>
             </div>
           </div>
-            <h3 id="methods">Methods</h3>
+            <h2 id="methods">Methods</h2>
               <div>
                 <h4 id="method-get">get</h4>
                 <div class="summary lower"><code>
