--- a/tabs.html
+++ b/tabs.html
@@ -28,7 +28,7 @@ create, modify, and rearrange tabs in the browser.
 
         <h2 id="apiReference">API Reference: chrome.tabs</h2>
         <div class="api_reference">
-            <h3 id="types">Types</h3>
+            <h2 id="types">Types</h2>
               <div>
                 <h3 id="type-Tab">Tab</h3>
                 <div>
@@ -881,7 +881,7 @@ create, modify, and rearrange tabs in the browser.
                                 <code class="property">
                                   (
                                     <span class="optional">optional</span>
-                                    enumerated string ["normal", "popup", "panel", "app"]
+                                    enumerated string ["normal", "popup"]
                                   )
                                 </code>
                               </dt>
