small change to h2

--- a/tut_icons.html
+++ b/tut_icons.html
@@ -5,7 +5,7 @@ author: demonstro
 copyright: opera-ccby
 ---
  
-<h2>Table of contents</h2>
+<h2>Contents</h2>
   <ul>
     <li><a href="#intro">Introduction</a></li>
     <li><a href="#hints-tips">Quick hints and tips</a>
