removed hattip option, added support option. also added support details to all API docs.

--- a/alarms.html
+++ b/alarms.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.alarms
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/alarms.html
 ---
