--- a/background_pages.html
+++ b/background_pages.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: Background Pages
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/background_pages.html
 ---
