--- a/i18n.html
+++ b/i18n.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.i18n
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/i18n.html
 ---
