--- a/contextMenus.html
+++ b/contextMenus.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.contextMenus
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/contextMenus.html
 ---
