--- a/events.html
+++ b/events.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.events
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/events.html
 ---
