--- a/extension.html
+++ b/extension.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.extension
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/extension.html
 ---
