--- a/idle.html
+++ b/idle.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.idle
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/idle.html
 ---
