--- a/management.html
+++ b/management.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.management
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/management.html
 ---
