--- a/manifest.html
+++ b/manifest.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: "Formats: Manifest Files" # this title needs quotes
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/manifest.html
 ---
