--- a/pageAction.html
+++ b/pageAction.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.pageAction
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/pageAction.html
 ---
