--- a/runtime.html
+++ b/runtime.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.runtime
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/runtime.html
 ---
