--- a/tabs.html
+++ b/tabs.html
@@ -1,6 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.tabs
+support: 15
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/tabs.html
 ---
