--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -170,7 +170,7 @@ copyright: opera-ccby
 	<li>No external JavaScript is allowed. All JavaScript code must be contained in the extension. External APIs are ok.</li>
 	<li>Values in <code>manifest.json</code> must be sound and valid.</li>
 	<li>Speed Dial extensions cannot just be a static picture linking to a website. They must provide valuable functionality, such as e.g. just-in-time info.</li>
-	<li>Extensions cannot just consist of a button linking to a website. They must provide valuable functionality, such as e.g. a transformation applied on a page when a button is clicked.</li>
+	<li>Extensions cannot just consist of a button linking to a website, or a popup with some static anchors linking to a website. Extensions must provide valuable functionality, such as e.g. a transformation applied on a page when a button is clicked.</li>
 	<li>Icons inside the address bar (page actions) cannot have a padlock shape.</li>
 	<li>We must be able to review the code in a reasonable manner. Therefor, the code shouldn't be obfuscated. Binary code is not ok.</li>
 	<li>The summary must answer the question: what does your extension do? It must be composed of grammatically correct and complete sentences.</li>
